Radio Button Group Example

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,5 +7,6 @@
 <body>
 	<h1>Cloudtechpro Thymeleaf Tutorials</h1>
     <p><a href="/display-name?name=Cloudtechpro">Display parameter value</a></p>
+    <p><a href="/radiobox-display">Radio group example</a></p>
 </body>
 </html>
